--- a/DB_ECommerce.MVC/Views/Orders/Details.cshtml
+++ b/DB_ECommerce.MVC/Views/Orders/Details.cshtml
@@ -20,10 +20,10 @@
         <dd class="col-sm-10">@Model.TotalPrice</dd>
 
         <dt class="col-sm-2">Customer</dt>
-        <dd class="col-sm-10">@Model.Customer</dd>
+        <dd class="col-sm-10">@Model.Customer?.LastName</dd>
 
-        <dt class="col-sm-2">Payment</dt>
-        <dd class="col-sm-10">@Model.Payment</dd>
+        <dt class="col-sm-2">PaymentID</dt>
+        <dd class="col-sm-10">@Model.PaymentDisplay</dd>
     </dl>
 </div>
 
