--- a/DB_ECommerce.MVC/Views/Orders/Edit.cshtml
+++ b/DB_ECommerce.MVC/Views/Orders/Edit.cshtml
@@ -19,9 +19,11 @@
         <span asp-validation-for="TotalPrice" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="Customer" class="control-label"></label>
-        <input asp-for="Customer" class="form-control" />
-        <span asp-validation-for="Customer" class="text-danger"></span>
+        <label asp-for="CustomerID" class="control-label"></label>
+        <select asp-for="CustomerID" class="form-control" asp-items="ViewBag.Customers">
+            <option value="">-- Select Customer --</option>
+        </select>
+        <span asp-validation-for="CustomerID" class="text-danger"></span>
     </div>
     <button type="submit" class="btn btn-primary">Save Changes</button>
     <a asp-action="Index" class="btn btn-secondary">Back to List</a>
