--- a/DB_ECommerce.MVC/Views/Products_Orders/Create.cshtml
+++ b/DB_ECommerce.MVC/Views/Products_Orders/Create.cshtml
@@ -23,7 +23,7 @@
         <span asp-validation-for="Quantity" class="text-danger"></span>
     </div>
     <button type="submit" class="btn btn-primary">Create</button>
-    <a asp-action="Index" class="btn-danger btn-secondary">Back to List</a>
+    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
 </form>
 
     
